# Parallel-Calculations-Labs

./: .gitignore  pom.xml
sem2/: CMakeLists.txt
sem2/include/: matrix.hpp  timer.hpp
sem2/src/: inverse_cuda.cpp  inverse_mpi.cpp  inverse_openmp.cpp  inverse_sequential.cpp  main.cpp  matrix.cpp
src/main/java/ru/lab/: Lab0.java  Lab1.java  Lab2.java  Main.java
